--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -139,8 +139,8 @@ CC_WARNINGS := \
   -Wstrict-aliasing \
   -Wno-unused-parameter
 
+#-Werror
 COMMON_FLAGS := \
-  -Werror \
   -fno-unwind-tables \
   -ffunction-sections \
   -fdata-sections \
